frontend/app/assets/stylesheets/archivesspace/token-input.less
@import "variables";

ul.token-input-list {
  overflow: hidden; 
  height: auto !important; 
  height: 1%;
  width: 380px;
  cursor: text;
  font-size: 12px;
  font-family: Verdana, sans-serif;
  z-index: 999;
  margin: 0;
  padding: 0;
  list-style-type: none;
  
  background-color: @inputBackground;
  border: 1px solid @inputBorder;
  .border-radius(@inputBorderRadius);
  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
  @transition: border linear .2s, box-shadow linear .2s;
  .transition(@transition);

  // Focus state
  &:focus {
    border-color: rgba(82,168,236,.8);
    outline: 0;
    outline: thin dotted \9; /* IE6-9 */
    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)");
  }
}

.control-group.error ul.token-input-list {
  border-color: #ee5f5b;
}

.input-append ul.token-input-list  {
  .border-radius(@inputBorderRadius 0 0 @inputBorderRadius);
}

ul.token-input-list li {
  list-style-type: none;
  white-space: normal;
  position: relative;
  padding-right: 20px;
}

ul.token-input-list li input {
  border: 0;
  width: 350px;
  padding: 3px 8px;
  background-color: white;
  -webkit-appearance: caret;
}

ul.token-input-disabled,
ul.token-input-disabled li input {
  background-color: #E8E8E8;
}

ul.token-input-disabled li.token-input-token {
  background-color: #D9E3CA;
  color: #7D7D7D
}

ul.token-input-disabled li.token-input-token span {
  color: #CFCFCF;
  cursor: default;
}

.token,
li.token-input-token {
  overflow: hidden; 
  height: auto !important; 
  height: 1%;
  margin: 0 4px 4px 0;
  background: #BEEBFF;
  border: 1px solid #99DEFD;
  padding: 2px;
  color: #555;
  display: block;
  .border-radius(@inputBorderRadius);
}

li.token-input-token {
  margin: 2px;
}

.token {
  width: auto;
  display: inline;
  padding: 2px 4px;
}

li.token-input-token p {
  float: left;
  padding: 0;
  margin: 0;
}

li.token-input-token .token-input-delete-token {
  position: absolute;
  right: 5px;
  top: 2px;
  color: #777;
  cursor: pointer;
}

li.token-input-selected-token {
  background: #BEEBFF;
  font-weight: bold;
}

li.token-input-selected-token span {
  color: #bbb;
}

div.token-input-dropdown {
  position: absolute;
  width: 380px;
  background-color: #fff;
  overflow: hidden;
  border-left: 1px solid #ccc;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  cursor: default;
  font-size: 12px;
  font-family: Verdana, sans-serif;
  z-index: 1;
}

div.token-input-dropdown p {
  margin: 0;
  padding: 5px;
  font-weight: bold;
  color: #777;
}

div.token-input-dropdown ul {
  margin: 0;
  padding: 0;
}

div.token-input-dropdown ul li {
  background-color: #fff;
  padding: 3px;
  list-style-type: none;
}

div.token-input-dropdown ul li.token-input-dropdown-item {
  background-color: #fafafa;
}

div.token-input-dropdown ul li.token-input-dropdown-item2 {
  background-color: #fff;
}

div.token-input-dropdown ul li em {
  font-weight: bold;
  font-style: normal;
}

div.token-input-dropdown ul li.token-input-selected-dropdown-item {
  background: #BEEBFF;
}

.linker-wrapper.multiplicity-many li.token-input-input-token {
  min-height: 28px;
}

.linker-list {
  max-height: 240px;
}

.linker-list ul {
  margin: 0;
  list-style: none;
}
.linker-list li {
  padding:0;
}
.linker-list label {
  padding: 5px;
}
.linker-list label:hover {
  background-color: #F1f1f1;
}
.linker-wrapper.input-append {
  float: left;
  width: 420px;
  .token-input-list {
    float: left;
  }
  .btn-group {
    float: left;
    left: -1px;
    .btn {
      .border-radius(0 @inputBorderRadius @inputBorderRadius 0);
    }
  }
}
.linker-wrapper.multiplicity-one {
  .token-input-list {
    min-height: 28px;
  }
}

.token-input-dropdown, .token-input-list {
  .icon-token {
    float: left;
    .opacity(75);
    margin: 2px 4px 0 0;
  }

  .token-input-selected-token .icon-token {
    .opacity(100);
  }

  .agent_person .icon-token {background-position: -168px 0;}
  .agent_software .icon-token {background-position: -360px -144px;}
  .agent_corporate_entity .icon-token {background-position: -432px -144px;}
  .agent_family .icon-token {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
  .resource .icon-token {background-position: -264px -24px;}
  .archival_object .icon-token {background-position: -24px -24px;}
  .digital_object .icon-token {background-position: -384px -120px;}
  .digital_object_component .icon-token {background-position: -456px -24px;}
  .accession .icon-token {background-position: -168px -24px;}
  .subject .icon-token {display: none;}
  .location .icon-token {background-position: -24px -72px;}
}

@media (min-width: 768px) and (max-width: 979px) {
  ul.token-input-list {
    width: 300px;
  }

  ul.token-input-list li input {
    width: 300px;
  }
}

.linker-wrapper.sortable {
  .token-input-token {
    cursor: pointer;
  }

  .sortable-placeholder {
    height: @baseLineHeight;
    border: 1px dashed #CCC;
    padding: 2px;
    margin: 4px;
    .border-radius(@inputBorderRadius);
  }
}
.token-list {
  margin:0;
  > li {
    list-style: none;
    margin-bottom: 4px;
    float: left;
  }
}

